--- a/css/main.css
+++ b/css/main.css
@@ -161,4 +161,180 @@ nav {
 }
 
 
+.carousel_cls{
+    background-image: url("../img/slide-bg-complexity.jpg");
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center 90px;
+    height: 650px;
+    display:block;
+    padding-top:78px;
+    padding-bottom: 0;
+    color:white;
+    z-index: 50;
+    position: relative;
+}
 
+
+.carousel_cls_con{
+    max-width: 960px;
+    margin-top:78px;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-left: auto;
+    z-index: 50;
+    position: relative;
+}
+
+.carousel_cls_con > h1{
+    font-size: 42px ; 
+    font-weight: 400;
+    font-size: 42px; 
+    line-height: 44px; 
+    text-align: left;
+    width:415px;
+
+}
+
+.carousel_cls_internal ul{
+    padding-left: 0;
+    padding-top: 30px;
+}
+
+
+.more_btn{
+    text-decoration:none;
+    background-color:  #3399cc;
+    box-shadow: 0px 1px 2px 0px rgba(62, 157, 194, 0.75);
+    border-radius: 6px;
+    color: white;
+    padding: 4px 5px 5px 7px;
+    font-size:14px;
+}
+
+.more_btn:after{
+    content: url("../img/btnArrow.png");
+    padding-left: 25px;
+
+}
+
+.more_btn:hover{
+  background :#2291C7;
+}
+
+.more_btn img{
+    padding-left:30px;
+    padding-right: 0px;
+    height:9px;
+    width:9px;
+
+}
+
+.etc_cls{
+    list-style-type: none;
+}
+.etc_cls a{
+    display: none;
+    text-decoration: none;
+}
+.first{
+  background: #2D95C9;
+  font: 1em/11px Arial;
+  text-align: center;
+  float: left;
+  margin-left: 7px;
+  width: 11px;
+  height: 11px;
+  cursor: pointer;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  color:#2D95C9;
+    
+}
+
+.second ,
+.third ,
+.forth{
+  background: #e5e5e5;
+  color: #e5e5e5;
+  font: 1em/11px Arial;
+  text-align: center;
+  float: left;
+  margin-left: 7px;
+  width: 11px;
+  height: 11px;
+  cursor: pointer;
+  -webkit-border-radius: 3px;
+  border-radius: 3px
+
+}
+
+
+.second:hover,
+.third:hover ,
+.forth:hover{
+    background: #2D95C9;
+
+}
+
+.box_cls{
+    width:286px;
+    height:174px;
+    color:white;
+    border-radius: 6px;
+    padding: 10px;
+    display: inline-block;
+    margin-right: 10px;
+    position: relative;
+}
+
+
+
+.box_cls h2{
+    cursor:pointer;
+    font-size: 24px;
+    line-height: 30px; 
+    text-align: left;
+    margin:5px;
+    padding-bottom:25px;
+    font-weight: 300;
+}
+
+
+.box_cls a{
+    text-decoration:none;
+    color:white;
+    font-size:15px;
+    font-weight:bold;
+}
+
+
+.orange_box{
+    background-color: #FF8A3C;
+    list-style: none;
+    opacity: 0.7;
+}
+
+.pink_box{
+    background-color: #f24f9e;
+    list-style: none;
+    opacity: 0.7;
+}
+
+
+.green_box{
+    background-color: #66CC33;
+    list-style: none;
+    opacity: 0.7;
+}
+
+
+
+.box_cls:hover{
+    opacity: 1;
+}
+
+.box_cls a:hover{
+    color: #30A4D9;
+}
