--- a/css/main.css
+++ b/css/main.css
@@ -55,12 +55,12 @@ nav {
 .nav_cls {
 
     list-style-type: none;
-/*    margin: 0;
+    margin: 0;
     padding-left:180px;
     padding-right:45px;
     padding-top:1px;
     background-color: white;
-    display: inline-block;*/
+    display: inline-block;
 }
 
 .nav_cls:after {
