--- a/css/main.css
+++ b/css/main.css
@@ -197,7 +197,14 @@ li a {
     width:415px;
 
 }
-
+.carousel_cls_con_up_in{
+      font-size: 42px ; 
+    font-weight: 400;
+    font-size: 42px; 
+    line-height: 44px; 
+    text-align: left;
+    width:415px;
+}
 .carousel_cls_internal ul{
     padding-left: 0;
     padding-top: 30px;
