--- a/css/main.css
+++ b/css/main.css
@@ -198,10 +198,10 @@ li a {
 }
 .carousel_cls_con_up_in{
     font-weight: 400;
-    font-size: 42px; 
-    line-height: 44px; 
+    font-size: 22px; 
+    /*line-height: 44px; */
     text-align: left;
-    width:415px;
+    /*width:415px;*/
 }
 .carousel_cls_internal ul{
     padding-left: 0;
