--- a/css/main.css
+++ b/css/main.css
@@ -349,7 +349,7 @@ li a {
 
 
 .offerings_cls{
-    background: url("../img/weDoBG.jpg") no-repeat center center;
+    background: url("../img/weDoBG.jpg");
     z-index: 25;
     padding-bottom: 58px;
     position: relative;
