--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,7 @@ nav {
     /*list-style-type: none;*/
     /*margin: 0;*/
     /*padding: 0;*/
+    columns: 2;
     overflow: hidden;
     display: none;
     position: absolute;
