--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,9 @@ nav {
     /*list-style-type: none;*/
     /*margin: 0;*/
     /*padding: 0;*/
-    columns: 2;
+    -webkit-columns: 100px 3; /* Chrome, Safari, Opera */
+    -moz-columns: 100px 3; /* Firefox */
+    columns: 100px 3;
     overflow: hidden;
     display: none;
     position: absolute;
