--- a/css/main.css
+++ b/css/main.css
@@ -77,11 +77,12 @@ nav {
     /*padding: 0;*/
     -webkit-columns: 80px 2; /* Chrome, Safari, Opera */
     -moz-columns: 80px 2; /* Firefox */
-    columns: 80px 2;
+    columns: 100px 3;
     overflow: hidden;
     display: none;
     position: absolute;
     width: 100%;
+    height: 100%;
 }
 
 li a {
