--- a/css/main.css
+++ b/css/main.css
@@ -81,8 +81,8 @@ nav {
     overflow: hidden;
     display: none;
     position: absolute;
-    width: 100%;
-    height: 100px;
+    width: 250px;
+    height: 250px;
 
 }
 
