--- a/css/main.css
+++ b/css/main.css
@@ -98,11 +98,13 @@ li a {
 .nav_cls li:hover > .nav_cls_internal {
     display: block;
     background-color: white;
+    list-style-type: none;
 }
 
 .nav_cls_external > .nav_cls_internal > li {
     float: none;
 background-color: white;
+list-style-type: none;
 }
 
 .nav_cls> li > a {
