--- a/css/main.css
+++ b/css/main.css
@@ -872,18 +872,19 @@ HTML
     height: 97px;
     padding-right: 5px;
     width: 110px;
+    margin-top: 0px;
     content: url("../img/mts_w108px_X_h95px.jpg");
-    transition-property: height;
+    transition-property: margin-top;
 }
 
 .mtc:hover{
     padding-top: 10px;
-    height: 0px;
+    height: 97px;
     padding-right: 5px;
     width: 110px;
     content: url("../img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg");
     position: relative;
-
+    margin-top: 97px;
 }
 
 .tata_sky{
