--- a/css/main.css
+++ b/css/main.css
@@ -882,7 +882,8 @@ HTML
     height: 97px;
     padding-right: 5px;
     width: 110px;
-    content: url("../img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg");
+    /*content: url("../img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg");*/
+    content: url("../img/mts_w108px_X_h95px.jpg");
     position: relative;
     margin-top: 97px;
 }
