--- a/css/main.css
+++ b/css/main.css
@@ -825,66 +825,87 @@ time{
 }
 
 .mtc{
-    position: relative;
+/*    position: relative;
     padding-top: 10px;
     height: 97px;
     padding-right: 5px;
     width: 110px;
-    /*margin-top: 0px;*/
+    margin-top: 0px;
     content: url("../img/mts_w108px_X_h95px.jpg");
-    /*transition-property: margin-top;*/
-}
-.mtc .background-image: "../img/mts_w108px_X_h95px.jpg"{
-    position: absolute;
-    padding-top: 10px;
-    height: 97px;
-    padding-right: 5px;
-    width: 110px;
-    /*margin-top: 0px;*/
-    content: url("../img/mts_w108px_X_h95px.jpg");
-    /*transition-property: margin-top;*/
-}
-.mtc:hover{
-    padding-top: 10px;
-    height: 97px;
-    padding-right: 5px;
-    width: 110px;
-    content: url("../img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg");
-    /*content: url("../img/mts_w108px_X_h95px.jpg");*/
-    position: relative;
-    /*margin-top: 97px;*/
-}
-
-.mtc{
-    position: relative;
-    padding-top: 10px;
-    height: 97px;
-    padding-right: 5px;
-    width: 110px;
-    /*margin-top: 0px;*/
-    content: url("../img/mts_w108px_X_h95px.jpg");
-    /*transition-property: margin-top;*/
+    transition-property: margin-top;*/
+    position:relative;
+    overflow:hidden;
+    width:110px;
+    height:97px;
 }
 .mtc .textbox{
-    position: absolute;
+/*    position: absolute;
     padding-top: 10px;
     height: 97px;
     padding-right: 5px;
     width: 110px;
-    /*margin-top: 0px;*/
+    margin-top: 0px;
     content: url("../img/mts_w108px_X_h95px.jpg");
-    /*transition-property: margin-top;*/
+    transition-property: margin-top;*/
+    position:absolute;
+    top:0;
+    left:0;
+    width:110px;
+    height:97px;
+    margin-left:-110px;
 }
-.mtc:hover{
-    padding-top: 10px;
+.mtc:hover .textbox{
+/*    padding-top: 10px;
     height: 97px;
     padding-right: 5px;
     width: 110px;
-    content: url("../img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg");
-    /*content: url("../img/mts_w108px_X_h95px.jpg");*/
+    content: url("../img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg");*/
+    /*content: url("../img/mts_w108px_X_h95px.jpg");
     position: relative;
     /*margin-top: 97px;*/
+    margin-left:0;  
 }
+
+.mtc img{
+/*    position: relative;
+    padding-top: 10px;
+    height: 97px;
+    padding-right: 5px;
+    width: 110px;*/
+    /*margin-top: 0px;*/
+    /*content: url("../img/mts_w108px_X_h95px.jpg");*/
+    /*transition-property: margin-top;*/
+     margin-left:0;
+}
+.mtc:hover img{
+/*    position: absolute;
+    padding-top: 10px;
+    height: 97px;
+    padding-right: 5px;
+    width: 110px;*/
+    /*margin-top: 0px;*/
+    /*content: url("../img/mts_w108px_X_h95px.jpg");*/
+    /*transition-property: margin-top;*/
+    margin-left:110px;
+}
+
+.text {
+    padding-top: 50px;
+}
+.mtc img, .textbox {
+    -webkit-transition: all 0.7s ease;
+    transition: all 0.7s ease;
+}
+/*.mtc:hover{*/
+/*    padding-top: 10px;
+    height: 97px;
+    padding-right: 5px;
+    width: 110px;
+    content: url("../img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg");*/
+    /*content: url("../img/mts_w108px_X_h95px.jpg");*/
+    /*position: relative;*/
+    /*margin-top: 97px;*/
+/*}*/
 
 .tata_sky{
     position: relative;
