--- a/css/main.css
+++ b/css/main.css
@@ -852,7 +852,7 @@ time{
     left:0;
     width:110px;
     height:97px;
-    margin-bottom:-97px;
+    margin-top:-97px;
 }
 .mtc:hover .textbox{
 /*    padding-top: 10px;
@@ -863,7 +863,7 @@ time{
     /*content: url("../img/mts_w108px_X_h95px.jpg");
     position: relative;
     /*margin-top: 97px;*/
-    margin-bottom:0;  
+    margin-top:0;  
 }
 
 .mtc img{
@@ -875,7 +875,7 @@ time{
     /*margin-top: 0px;*/
     /*content: url("../img/mts_w108px_X_h95px.jpg");*/
     /*transition-property: margin-top;*/
-     margin-bottom:0;
+     margin-top:0;
 }
 .mtc:hover img{
 /*    position: absolute;
@@ -886,7 +886,7 @@ time{
     /*margin-top: 0px;*/
     /*content: url("../img/mts_w108px_X_h95px.jpg");*/
     /*transition-property: margin-top;*/
-    margin-bottom:97px;
+    margin-top:110px;
 }
 
 .text {
