--- a/css/main.css
+++ b/css/main.css
@@ -838,7 +838,7 @@ time{
     width:110px;
     height:97px;
 }
-.mtc .textbox{
+.mtc .bg{
 /*    position: absolute;
     padding-top: 10px;
     height: 97px;
@@ -854,7 +854,7 @@ time{
     height:97px;
     margin-top:-97px;
 }
-.mtc:hover .textbox{
+.mtc:hover .bg{
 /*    padding-top: 10px;
     height: 97px;
     padding-right: 5px;
@@ -889,10 +889,10 @@ time{
     margin-top:110px;
 }
 
-.text {
+.bg_in {
     padding-top: 50px;
 }
-.mtc img, .textbox {
+.mtc img, .bg {
     -webkit-transition: all 0.7s ease;
     transition: all 0.7s ease;
 }
