--- a/css/main.css
+++ b/css/main.css
@@ -848,6 +848,7 @@ time{
     content: url("../img/mts_w108px_X_h95px.jpg");
     transition-property: margin-top;*/
     position:absolute;
+    visibility: hidden;
     top:0;
     left:0;
     width:110px;
@@ -863,7 +864,7 @@ time{
     /*content: url("../img/mts_w108px_X_h95px.jpg");
     position: relative;
     /*margin-top: 97px;*/
-    margin-top:20;  
+    margin-top:0;  
 }
 
 .mtc img{
@@ -886,7 +887,7 @@ time{
     /*margin-top: 0px;*/
     /*content: url("../img/mts_w108px_X_h95px.jpg");*/
     /*transition-property: margin-top;*/
-    margin-top:110px;
+    margin-top:97px;
 }
 
 .bg_in {
