--- a/css/main.css
+++ b/css/main.css
@@ -864,6 +864,7 @@ time{
     /*content: url("../img/mts_w108px_X_h95px.jpg");
     position: relative;
     /*margin-top: 97px;*/
+    visibility: visible;
     margin-top:0;  
 }
 
