--- a/css/main.css
+++ b/css/main.css
@@ -848,7 +848,7 @@ time{
     content: url("../img/mts_w108px_X_h95px.jpg");
     transition-property: margin-top;*/
     position:absolute;
-    visibility: hidden;
+    visibility: collapse;
     top:0;
     left:0;
     width:110px;
