--- a/css/main.css
+++ b/css/main.css
@@ -76,14 +76,14 @@ nav {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    -webkit-columns: 100px 3; /* Chrome, Safari, Opera */
-    -moz-columns: 100px 3; /* Firefox */
-    columns: 100px 3;
-    overflow: hidden;
+    -webkit-columns: 250px; /* Chrome, Safari, Opera */
+    -moz-columns: 250px; /* Firefox */
+    columns: 250px;
+    overflow: visible;
     display: none;
-    position: absolute;
-    width: 250px;
-    height: 250px;
+    position: relative;
+    width: 100%;
+    height: 220px;
 
 }
 
