--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ nav {
     columns: 250px;
     overflow: visible;
     display: none;
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 220px;
 
@@ -299,8 +299,9 @@ list-style-type: none;
     color:white;
     border-radius: 6px;
     padding: 10px;
-    display: inline-block;
+    display: inline-flex;
     margin-right: 10px;
+    margin-top: 10px;
     position: relative;
 
 }
