--- a/css/main.css
+++ b/css/main.css
@@ -205,12 +205,13 @@ list-style-type: none;
     width:555px;
 
 }
-.carousel_cls_con_up_in{
+.carousel_cls_con_up{
     font-weight: 400;
     font-size: 22px; 
     /*line-height: 44px; */
     text-align: left;
     /*width:415px;*/
+    color: white;
 }
 .carousel_cls_internal ul{
     padding-left: 0;
