--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,7 @@ list-style-type: none;
     width:555px;
 
 }
-.carousel_cls_con_up{
+.carousel_cls_con_up ul{
     font-weight: 400;
     font-size: 22px; 
     /*line-height: 44px; */
