--- a/css/main.css
+++ b/css/main.css
@@ -378,7 +378,7 @@ list-style-type: none;
 
 
 .offerings_cls{
-    background: url("../img/weDoBG.jpg") no-repeat center center;
+    background: url("../img/weDoBackground.png") no-repeat center center;
     z-index: 25;
     padding-bottom: 58px;
     position: relative;
